# conclusive-in-cpp-rashmi-b

./: CMakeLists.txt  README.md  alertInterface.h  notify_user_and_controller.cpp  temperatureAlerter.h  typewise-alert.cpp  typewise-alert.h  typewise-alert.tests.cpp  userAndControllerAlerter.h
.github/workflows/: main.yml
test/: catch.h  catch.hpp
